# moond

./: .gitignore  CMakeLists.txt  Cargo.toml  cc-copy.sh  native.sh
crates/moond-sys/: Cargo.toml  build.rs  sync.sh
crates/moond-sys/src/: lib.rs
include/: core.h
src/: core.c
